Converted all units to rem units & improved our code a bit & learned some of the best practices used by the CSS community

--- a/css/style.css
+++ b/css/style.css
@@ -7,24 +7,39 @@ Dark green: #28b485
 
 */
 
-/* Basic Reset ======================================================================= */
-
-* {
+*,
+*::after,
+*::before {                 /*  slight improvement is to add after & before psuedo 
+                                elements to the universal reset */
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: inherit;    /*  here we used the inherit as our declared value 
+                                which simply inherits from our body selector's
+                                declaration of box-sizing */
 }
+
+html {
+    font-size: 62.5%;
+}
+
+/*  62.5% is what we will use because most browers has 16px as it default font-size
+    so 62.5% of 16px = 10px which is what we want as our base font size.
+    But why do we want % font-size values for our base font-size... its because we
+    want our users to have the power to scale the font-size according to their needs
+    but px font-size values doesn't give users the power to scale the font-size 
+    according to their needs. */
 
 body {
     font-family: "Lato", sans-serif;
     font-weight: 400;
-    font-size: 16px;
+    /* font-size: 16px; */
     line-height: 1.7;
     color: #777;
-    padding: 30px;
+    padding: 3rem;
+
+    box-sizing: border-box;
 }
 
-/* HEADER ============================================================================== */
 .header {
     height: 95vh;
     background: linear-gradient(
@@ -42,12 +57,12 @@ body {
 
 .logo-box {
     position: absolute;
-    top: 40px;
-    left: 40px;
+    top: 4rem;
+    left: 4rem;
 }
 
 .logo {
-    height: 35px;
+    height: 3.5rem;
 }
 
 .text-box {
@@ -63,14 +78,14 @@ body {
     text-transform: uppercase;
 
     backface-visibility: hidden; /* a hack to disbale the background shaking */
-    margin-bottom: 60px;
+    margin-bottom: 6rem;
 }
 
 .heading-primary-main {
     display: block;
-    font-size: 60px;
+    font-size: 6rem;
     font-weight: 400;
-    letter-spacing: 35px;
+    letter-spacing: 3.5rem;
 
     animation-name: moveInLeft;
     animation-duration: 1s;
@@ -83,9 +98,9 @@ body {
 
 .heading-primary-sub {
     display: block;
-    font-size: 20px;
+    font-size: 2rem;
     font-weight: 700;
-    letter-spacing: 17.4px;
+    letter-spacing: 1.75rem;
 
     animation: moveInRight 1s ease-out;
 }
@@ -93,11 +108,11 @@ body {
 @keyframes moveInLeft {
     0% {
         opacity: 0;
-        transform: translateX(-100px);
+        transform: translateX(-10rem);
     }
 
     80% {
-        transform: translateX(10px);
+        transform: translateX(1rem);
     }
 
     100% {
@@ -109,11 +124,11 @@ body {
 @keyframes moveInRight {
     0% {
         opacity: 0;
-        transform: translateX(100px);
+        transform: translateX(-10rem);
     }
 
     80% {
-        transform: translateX(-10px);
+        transform: translateX(-1rem);
     }
 
     100% {
@@ -125,7 +140,7 @@ body {
 @keyframes moveInBottom {
     0% {
         opacity: 0;
-        transform: translateY(30px);
+        transform: translateY(3rem);
     }
 
     100% {
@@ -138,64 +153,52 @@ body {
 .btn:visited {
     text-transform: uppercase;
     text-decoration: none;
-    padding: 15px 40px;
+    padding: 1.5rem 4rem;
     display: inline-block;
-    border-radius: 100px;
-    transition: all .2s;
+    border-radius: 10rem;
+    transition: all 0.2s;
     position: relative;
+    font-size: 1.6rem;
 }
 
 .btn:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
+    transform: translateY(-0.3rem);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
 }
 
 .btn:active {
-    transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+    transform: translateY(-0.1rem);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
 
-.btn-white {  /* .btn-white:link not needed here */
+.btn-white {
     background-color: #fff;
     color: #777;
 }
-
-/*  👇'after' pseudo class acts like a child to the parent-element which in this case
-    is the btn */
 
 .btn::after {
     content: "";
     display: inline-block;
     height: 100%;
     width: 100%;
-    border-radius: 100px;
+    border-radius: 10rem;
     position: absolute;
     left: 0;
     top: 0;
     z-index: -1;
-    transition: all .4s;
+    transition: all 0.4s;
 }
-
-/*  👆'position: absolute;' searches for the first element that has got the 
-    'position: relative;' property so that it can position itself according to that*/
 
 .btn-white::after {
     background-color: #fff;
 }
 
-.btn:hover::after { /* 👈this selector means when .btn is hovered over we want 
-                        the after pseudo element to style in a certain way */
+.btn:hover::after {
     transform: scaleX(1.4) scaleY(1.6);
     opacity: 0;
 }
 
-/*  We can scale an element in X & Y direction seperately using scaleX(...) scaleY(...) */
-
 .btn-animated {
-    animation: moveInBottom .5s ease-out .75s;
+    animation: moveInBottom 0.5s ease-out 0.75s;
     animation-fill-mode: backwards;
 }
-
-/*  animatation: name duration timing-function delay; */
-/*  animation-fill-mode: backwards; helps set the 0% animation state 
-    before it starts to animate */
