--- a/css/style.css
+++ b/css/style.css
@@ -9,25 +9,15 @@ Dark green: #28b485
 
 *,
 *::after,
-*::before {                 /*  slight improvement is to add after & before psuedo 
-                                elements to the universal reset */
+*::before {
     margin: 0;
     padding: 0;
-    box-sizing: inherit;    /*  here we used the inherit as our declared value 
-                                which simply inherits from our body selector's
-                                declaration of box-sizing */
+    box-sizing: inherit;
 }
 
 html {
     font-size: 62.5%;
 }
-
-/*  62.5% is what we will use because most browers has 16px as it default font-size
-    so 62.5% of 16px = 10px which is what we want as our base font size.
-    But why do we want % font-size values for our base font-size... its because we
-    want our users to have the power to scale the font-size according to their needs
-    but px font-size values doesn't give users the power to scale the font-size 
-    according to their needs. */
 
 body {
     font-family: "Lato", sans-serif;
@@ -55,17 +45,17 @@ body {
     position: relative;
 }
 
-.logo-box {
+.header__logo-box {
     position: absolute;
     top: 4rem;
     left: 4rem;
 }
 
-.logo {
+.header__logo {
     height: 3.5rem;
 }
 
-.text-box {
+.header__text-box {
     position: absolute;
     top: 40%;
     left: 50%;
@@ -81,7 +71,7 @@ body {
     margin-bottom: 6rem;
 }
 
-.heading-primary-main {
+.heading-primary--main {
     display: block;
     font-size: 6rem;
     font-weight: 400;
@@ -96,7 +86,7 @@ body {
        */
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
     display: block;
     font-size: 2rem;
     font-weight: 700;
@@ -171,7 +161,7 @@ body {
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
 
-.btn-white {
+.btn--white {
     background-color: #fff;
     color: #777;
 }
@@ -189,7 +179,7 @@ body {
     transition: all 0.4s;
 }
 
-.btn-white::after {
+.btn--white::after {
     background-color: #fff;
 }
 
@@ -198,7 +188,7 @@ body {
     opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
     animation: moveInBottom 0.5s ease-out 0.75s;
     animation-fill-mode: backwards;
 }
