--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -14,6 +14,7 @@
         border-bottom: 3px solid transparent;
         width: 90%;
         display: block;
+        transition: all 0.3s;
 
         &:focus {
             outline: none;
@@ -24,7 +25,6 @@
         &:focus:invalid {
             border-bottom: 3px solid $color-secondary-dark;
         }
-        // both :focus:invalid {...} & :focus:valid {...} is possible
 
         &::-webkit-input-placeholder {
             color: $color-grey-dark-2;
@@ -45,8 +45,50 @@
         visibility: hidden;
         transform: translateY(-4rem);
     }
-    // general sibling selector --> ~
-    // adjacent sibling selector --> +
-    // important note:  __label should come after __input in HTML for it to be
-    //                  selected with a sibling selector or it wouldn't work
+
+    &__radio-group {
+        width: 49%;
+        display: inline-block;
+    }
+
+    &__radio-input {
+        display: none;
+    }
+
+    &__radio-label {
+        font-size: $default-font-size;
+        cursor: pointer;
+        position: relative;
+        padding-left: 4.5rem;
+    }
+
+    &__radio-button {
+        height: 3rem;
+        width: 3rem;
+        border: 5px solid $color-primary;
+        border-radius: 50%;
+        display: inline-block;
+        position: absolute;
+        left: 0;
+        top: -0.4rem;
+
+        &::after {
+            content: "";
+            display: block;
+            height: 1.3rem;
+            width: 1.3rem;
+            border-radius: 50%;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: $color-primary;
+            opacity: 0;
+            transition: opacity 0.2s;
+        }
+    }
+
+    &__radio-input:checked ~ &__radio-label &__radio-button::after {
+        opacity: 1;
+    }
 }
