--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -24,11 +24,31 @@
         opacity: 0;
         transform: translate(-50%, -50%) scale(0.25);
         transition: all 0.5s 0.2s;
+
+        @include respond(tab-land) {
+            width: 83%;
+        }
+
+        @include respond(phone) {
+            width: 92%;
+        }
     }
 
     &__left {
         width: 33.333333%;
         display: table-cell;
+
+        @include respond(tab-land) {
+            display: block;
+            width: 100%;
+            height: 15rem;
+            position: relative;
+            overflow: hidden;
+        }
+
+        @include respond(phone) {
+            height: auto;
+        }
     }
 
     &__right {
@@ -36,11 +56,36 @@
         display: table-cell;
         vertical-align: middle;
         padding: 3rem 5rem;
+
+        @include respond(tab-land) {
+            display: block;
+            width: 100%;
+            padding: 2rem 4rem 3rem 4rem;
+        }
+
+        @include respond(phone) {
+            padding: 3rem;
+        }
     }
 
     &__img {
         display: block;
         width: 100%;
+
+        @include respond(tab-land) {
+            position: absolute;
+            width: 50%;
+            transform: translateY(-6rem);
+            transform-origin: bottom;
+
+            &:last-child {
+                right: 0;
+            }
+        }
+
+        @include respond(phone) {
+            display: none;
+        }
     }
 
     &__text {
@@ -59,6 +104,16 @@
         -ms-hyphens: auto;
         -webkit-hyphens: auto;
         hyphens: auto;
+
+        @include respond(tab-land) {
+            margin-bottom: 2rem;
+        }
+
+        @include respond(tab-port) {
+            -moz-column-count: 1;
+
+            column-count: 1;
+        }
     }
 
     // Open states
