Adding responsiveness to the images both in HTML & CSS

--- a/css/style.css
+++ b/css/style.css
@@ -987,11 +987,16 @@ body {
 
 .header {
   height: 95vh;
-  background: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)) no-repeat, #7ed56f url(../img/hero.jpg) no-repeat top;
+  background: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)) no-repeat, #7ed56f url(../img/hero-small.jpg) no-repeat top;
   background-size: cover;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   position: relative;
+}
+@media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em) {
+  .header {
+    background: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)) no-repeat, #7ed56f url(../img/hero.jpg) no-repeat top;
+  }
 }
 @media (max-width: 37.5em) {
   .header {
