--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -6,12 +6,23 @@
                 rgba($color-primary-dark, 0.8)
             )
             no-repeat,
-        $color-primary-light url(../img/hero.jpg) no-repeat top;
+        $color-primary-light url(../img/hero-small.jpg) no-repeat top;
     background-size: cover;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 
     position: relative;
+
+    @media (min-resolution: 192dpi) and (min-width: 37.5em),
+        (min-width: 125em) {
+        background: linear-gradient(
+                    to right bottom,
+                    rgba($color-primary-light, 0.8),
+                    rgba($color-primary-dark, 0.8)
+                )
+                no-repeat,
+            $color-primary-light url(../img/hero.jpg) no-repeat top;
+    }
 
     @include respond(phone) {
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
@@ -27,7 +38,7 @@
     &__logo {
         height: 3.5rem;
     }
-    
+
     &__text-box {
         position: absolute;
         top: 40%;
