--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -5,12 +5,17 @@
     top: 0;
     left: 0;
     background-color: rgba($color-black, 0.8);
-    backdrop-filter: blur(10px);
     z-index: 9999;
-
+    
     opacity: 0;
     visibility: hidden;
-    transition: all 0.3s;
+    transition: all 0.3s;   
+
+    @supports (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) {
+        -webkit-backdrop-filter: blur(10px);
+        backdrop-filter: blur(10px);
+        background-color: rgba($color-black, 0.3);
+    }
 
     &__content {
         @include absCenter;
